Добавлены файлы requirements.txt и .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-venv
-.idea
-media
+# Django specific
+*.log
+*.pot
+*.pyc
+__pycache__/
 db.sqlite3
-/news/migrations/
+media/
+staticfiles/
+
+# If you are using environments like virtualenv, pipenv
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# If you are using PyCharm for development
+.idea/
+
+# If you are using VS Code for development
+.vscode/
+
+# Ignore local settings
+local_settings.py
+
+# Ignore macOS specific files
+.DS_Store
+
+# Ignore node_modules if you are using npm/yarn
+node_modules/
